<resources>
    <string name="app_name">Yana</string>
    <string name="progress_dialog_login">Loggin in</string>
    <string name="depression_title">THE DEPRESSION</string>
    <string name="depression_description">La depresión es un trastorno mental frecuente, que se caracteriza por la presencia de tristeza, pérdida de interés o placer, sentimientos de culpa o falta de autoestima, trastornos de sueño o del apetito, sensación de cansancio y falta de concentración.</string>
    <string name="beck_title">BECK DEPRESSION INVENTARY</string>
    <string name="beck_description">En este cuestionario aparecen varios grupos de afirmaciones. A continuación señale cuál de las afirmaciones de cada grupo describe mejor cómo se ha sentido durante esta última semana, incluido el día de hoy. Asegúrese de leer todas las afirmaciones dentro de cada grupo antes de efectuar la elección.</string>
    <string name="downloading_contents">We\'re downloading your contents</string>
    <string name="loading_complete">WELCOME </string>
    <string name="cupcake_ipsum" translatable="false">Cupcake ipsum dolor sit amet marshmallow chocolate soufflé brownie. Marshmallow marzipan candy biscuit macaroon lollipop. Muffin ice cream dessert caramels. Lollipop halvah marshmallow sugar plum danish chupa chups cheesecake jelly-o chupa chups.</string>
    <string name="slide_to_begin">SLIDE TO BEGIN</string>
    <string name="what_is_depression">What is depression?</string>
    <string name="depression_symptoms">DEPRESSION SYMPTOMS</string>
    <string name="moderate_depression">MODERATE DEPRESSION</string>
    <string name="moderate_depression_description"> In the morning the feeling of sadness is higher and fluctuates during the day, but constantly is displeased with himself. Feel it bored most of the time and no longer enjoys doing what he liked before . * A score of 17 or more indicates you may need professional help.</string>
    <string name="you_are_not_alone">You are not alone</string>
    <string name="you_are_not_alone_description">  Do not be alarmed by the results your test. We together with your support network will help in this stage of your life.</string>
    <string name="severe_depression">SEVERE DEPRESSION</string>
    <string name="mild_depression">MILD DEPRESSION</string>
    <string name="welcome">Welcome!</string>
    <string name="hello_again">Hello again!</string>
    <string name="completed">Completed</string>
    <string name="incomplete">Incomplete</string>
    <string name="average_emotion">Average Emotion</string>
    <string name="no_action_plan">No action plan to show</string>
    <string name="live_together">Live together?</string>
    <string name="terms_and_privacy"><![CDATA[BY REGISTERING YOU CONFIRM THAT YOU HAVE READ & ACCEPTED THE ]]><b>TERMS OF SERVICE</b><![CDATA[ & THE ]]><b>PRIVACY POLICY</b></string>
    <string name="title_action_plan_evaluation">Personalize your action plan</string>
    <string name="description_email"> Choose your email preference to enter Yana.</string>
    <string name="description_full_name"> This name will use to contact your support network, so choose a name that you locate your loved ones.</string>
    <string name="description_location">Enter your postal code.</string>
    <string name="title_autoevaluation">Autoevaluation</string>
    <string name="description_occupation"> If your occupation is not on the list, select \'other\'.</string>
    <string name="description_password">Choose a password of at least 6 characters.</string>
    <string name="contactanos">Contact</string>
    <string name="politica_de_privacidad">Privacy Policy</string>
    <string name="danos_retroalimentaci_n">Feedback</string>
    <string name="study">¿Do you study?</string>
    <string name="work">¿Do you work?</string>
    <string name="workout">¿Do you workout?</string>
    <string name="depression_motive">Why are you depressed?</string>
    <string name="action_additional_info">Additional Info</string>
    <string name="not_done">Not Done</string>
    <string name="log_out_description">Are you sure you want to exit?</string>
    <string name="breakfast_notifications">Breakfast notifications</string>
    <string name="lunch_notifications">Lunch notifications</string>
    <string name="dinner_notifications">Dinner notifications</string>
    <string name="no_account"><![CDATA[DON\'T HAVE AN ACCOUNT?]]> <b>REGISTER</b></string>
    <string name="notifications">Notifications</string>
    <string name="food_reminders">Food reminders</string>
    <string name="good_morning">Good morning</string>
    <string name="good_night">Good night</string>
    <string name="end_plan">End plan</string>
    <string name="plan">Plan</string>
    <string name="faq">FAQ</string>
    <string name="about_us">About us</string>
    <string name="rate_us">Rate us</string>
    <string name="clear_fields">Clear fields</string>
    <string name="no_graph_data">There\'s not enough data to show the graphics</string>
    <string name="email_input_hint">EMAIL</string>
    <string name="full_name_input_hint">FULL NAME</string>
    <string name="birth_date_input_hint">BIRTH DATE</string>
    <string name="gender_input_hint">GENDER</string>
    <string name="location_input_hint">POSTAL CODE</string>
    <string name="occupation_input_hint">OCCUPATION</string>
    <string name="password_input_hint">PASSWORD</string>
    <string name="first_name_input_hint">First name</string>
    <string name="wake_up_hint">WAKE UP</string>
    <string name="sleep_hint">SLEEP</string>
    <string name="breakfast_hint">BREAKFAST</string>
    <string name="lunch_hint">LUNCH</string>
    <string name="dinner_hint">DINNER</string>
    <string name="from_hint">FROM</string>
    <string name="to_hint">TO</string>
    <string name="confirm_password_input_hint">CONFIRM PASSWORD</string>
    <string name="old_password_input_hint">Old password</string>
    <string name="new_password_input_hint">New password</string>
    <string name="hint_message_field">Respond here</string>
    <string name="error_empty_field">This field is required</string>
    <string name="error_invalid_email">Enter a valid email address</string>
    <string name="error_no_answer_selected">Please select one from the above</string>
    <string name="error_incomplete_form">Please complete all the fields</string>
    <string name="error_password_short">Password should be more than 6 caracters</string>
    <string name="error_password_not_match">Passwords don\'t match</string>
    <string name="error_password_match">Passwords match</string>
    <string name="continue_button">Continue</string>
    <string name="next_button">Next</string>
    <string name="take_test_now_button">Take now</string>
    <string name="take_test_later_button">Take later</string>
    <string name="restore_password">Restore password</string>
    <string name="clear_field">Clear field</string>
    <string name="button_log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="skip">Skip</string>
    <string name="have_an_account">ALREADY HAVE AN ACCOUNT? <b>LOG IN</b></string>
    <string name="button_register">Register</string>
    <string name="create_new_action_plan">Create new Action plan</string>
    <string name="take_now">Take now</string>
    <string name="exit">Exit</string>
    <string name="stay">Stay</string>
    <string name="take_later">Take later</string>
    <string name="description_autoevaluation">Before we start, please tell us with which situation you identify yourself the best.</string>
    <string name="description_action_plan_evaluation"></string>
    <string name="description_restore_password">Type the email that was used for your account, we will send you a confirmation.</string>
    <string name="identify">With which case you identify the best?</string>
    <string name="bt_save">Save</string>
    <string name="current_plan">Current Plan</string>
    <string name="label_activity_complete" translatable="false">ACTIVITY_COMPLETE</string>
    <string name="extra_activity" translatable="false">ACTIVITY</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile_title">Profile</string>
    <string name="action_action_plan_title">Action Plan</string>
    <string name="action_contacts_title">Contacts</string>
    <string name="action_progress_title">Progress</string>
    <string name="action_log_out_title">Log out</string>
    <string name="action_hotline">Emergency Call</string>
    <string name="action_add_contact">Add contact</string>
    <string name="action_plan_title">Action Plan</string>
    <string name="contacts_title">Contacts</string>
    <string name="progress_title">Progress</string>
    <string name="profile_title">Profile</string>
    <string name="help_title">Help</string>
    <string name="full_name_title">Full Name</string>
    <string name="email_title">Email</string>
    <string name="birth_date_title">Birth Date</string>
    <string name="gender_title">Gender</string>
    <string name="location_title">Postal Code</string>
    <string name="occupation_title">Occupation</string>
    <string name="settings_title">Settings</string>
    <string name="food_notification_title">Food Notifications</string>
    <string name="hotline_title">Emergency Call</string>
    <string name="change_password_title">Change password</string>
    <string name="contact_dialog_title">Add a new contact to support network</string>
    <string name="exception_message_generic">There was a server error</string>
    <string name="exception_message_no_connection">Check your internet connection</string>
    <string name="exception_message_user_not_found" translatable="false">Cannot retrieve data. Please Check your internet connection</string>
    <string name="network_error_persisted" translatable="false">No Network but post request persisted to queue!\n Request will be posted as soon as network is available.</string>
    <string name="network_error_not_persisted" translatable="false"><![CDATA[No network & could not persist request to queue!\nGoogle play services not available and android version less than 5.0!]]></string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="other">Other</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="select_phone_number">Select a phone number</string>
    <string name="undo">Undo</string>
    <string name="snackbar_emotion">Changed emotion to %s</string>
    <string name="unknown_error">Unknown error</string>
    <string name="depression_motive_title">Depression Motive</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
</resources>