<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_white_48dp"
            android:title="@string/action_profile_title" />
        <item
            android:id="@+id/nav_action_plan"
            android:checked="true"
            android:icon="@drawable/ic_offline_pin_white_48dp"
            android:title="@string/action_action_plan_title" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_people_white_48dp"
            android:title="@string/action_contacts_title" />
        <item
            android:id="@+id/nav_progress"
            android:icon="@drawable/ic_poll_white_48dp"
            android:title="@string/action_progress_title" />

    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="Help" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_power_settings_new_white_48dp"
            android:title="@string/action_log_out_title" />
    </group>

</menu>
