<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="bottom"
              android:orientation="vertical"
              android:paddingBottom="32dp"
              android:paddingLeft="32dp"
              android:id="@+id/llLoginForm"
              android:paddingRight="32dp"
              android:paddingTop="32dp">


    <com.icaboalo.yana.old.ui.widget.CustomFontTextView
        android:id="@+id/title_text"
        android:textColor="@color/primary_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_again"
        android:textSize="36sp" />

    <android.support.design.widget.TextInputLayout
        android:textColorHint="@color/secondary_text"
        android:id="@+id/username_input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp">

        <com.icaboalo.yana.old.ui.widget.CustomFontEditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_input_hint"
            android:inputType="textEmailAddress"
            android:text="user@test.com" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:textColorHint="@color/secondary_text"
        android:id="@+id/password_input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp">

        <com.icaboalo.yana.old.ui.widget.CustomFontEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_input_hint"
            android:inputType="textPassword"
            android:text="user123" />
    </android.support.design.widget.TextInputLayout>

    <com.icaboalo.yana.old.ui.widget.CustomFontTextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/forgot_password" />

    <Button
        android:id="@+id/login_button"
        style="@style/AppTheme.ButtonBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/button_log_in" />

</LinearLayout>