<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/rlBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="32dp">

    <com.icaboalo.yana.old.ui.widget.CustomFontTextView
        android:id="@+id/tvTitle"
        style="@style/AppTheme.TextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/title_autoevaluation"
        android:textAllCaps="true"/>


    <com.icaboalo.yana.old.ui.widget.CustomFontTextView
        android:id="@+id/tvDescription"
        style="@style/AppTheme.TextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/description_autoevaluation"
        android:textColor="@color/secondary_text"/>

    <Button
        android:id="@+id/btContinue"
        style="@style/AppTheme.ButtonGreen.Cornered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="48dp"
        android:text="@string/continue_button"/>
</RelativeLayout>