<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:padding="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="#801d1d26"
            android:text="@string/what_is_depression"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="#1d1d26"
            android:layout_marginTop="10dp"
            android:text="@string/cupcake_ipsum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:textColor="#801d1d26"
            android:text="@string/depression_symptoms"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="#1d1d26"
            android:layout_marginTop="10dp"
            android:text="@string/cupcake_ipsum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>