<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:orientation="vertical"
    android:id="@+id/rl_forgot_password"
    android:visibility="gone">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_input_container"
        android:layout_centerVertical="true"
        android:paddingBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.icaboalo.yana.old.ui.widget.CustomFontEditText
            android:id="@+id/et_email"
            android:hint="@string/email_input_hint"
            android:text="user@test.com"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <com.icaboalo.yana.old.ui.widget.CustomFontTextView
        android:layout_below="@+id/email_input_container"
        android:text="@string/description_restore_password"
        android:textAllCaps="true"
        android:gravity="center"
        android:lineSpacingExtra="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btRecoverPassword"
        android:layout_alignParentBottom="true"
        android:text="@string/restore_password"
        style="@style/AppTheme.ButtonGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>